# buildmate

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  bootstrap.py  bootstrap.sh  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
base/: CLAUDE.md.j2  README.md.j2  settings.json
base/agents/: accessibility-auditor.md.j2  api-designer.md.j2  api-generator.md.j2  backend-verifier.md.j2  dependency-auditor.md.j2  documentation-specialist.md.j2  eval-agent.md.j2  frontend-verifier.md.j2  grind.md.j2  migration-planner.md.j2  mobile-verifier.md.j2  orchestrator.md.j2  performance-auditor.md.j2  security-auditor.md.j2  site-analyzer.md.j2  ui-cloner.md.j2
base/hooks/: pre-commit.sh  session-end.sh  session-save.sh  task-complete.sh  track-changes.sh
base/patterns/: git-workflow.md
bootstrap-lib/: compose.sh  install.sh  post-install.sh  validate.sh
docs/: ADDING-A-STACK.md  AGENTS.md  BOOTSTRAP.md  EVALS.md  SKILLS.md
evals/: reporter.sh  runner.sh  scorer.sh
evals/shared-cases/: code-review-quality.jsonl  documentation-quality.jsonl  test-generation-quality.jsonl
lib/: __init__.py  cli.py  config.py  installer.py  lockfile.py  renderer.py  schema.py
mcp-dashboard/: pyproject.toml
mcp-dashboard/server/: chat_manager.py  database.py  main.py  mcp_tools.py  models.py  queue_manager.py  service_manager.py
mcp-dashboard/tests/: conftest.py  test_api.py  test_database.py  test_models.py  test_service_manager.py
mcp-dashboard/ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
mcp-dashboard/ui/src/: App.tsx  index.css
mcp-dashboard/ui/src/api/: client.ts
mcp-dashboard/ui/src/components/: ActivityFeed.tsx  AgentBadge.tsx  ArtifactItem.tsx  ArtifactModal.tsx  ChatBubble.tsx  ChatPanel.tsx  CreateTaskModal.tsx  KanbanBoard.tsx  QuestionModal.tsx  ServicesPanel.tsx  StatsBar.tsx  TaskCard.tsx  TaskDetailPanel.tsx  TeamPanel.tsx  ToastContainer.tsx
mcp-dashboard/ui/src/context/: ChatContext.tsx  DashboardContext.tsx
mcp-dashboard/ui/src/hooks/: useNotifications.ts
mcp-dashboard/ui/src/types/: index.ts
profiles/: api-only.yaml  landing.yaml  mobile-backend.yaml  saas.yaml
schemas/: profile.schema.json  stack.schema.json
shared/: CLAUDE.md  settings.json
shared/agents/: documentation-specialist.md  eval-agent.md  grind.md  orchestrator.md  regression-monitor.md  security-auditor.md
shared/hooks/: pre-bash-safety.sh  session-load.sh  session-save.sh
stacks/chi/: stack.yaml
stacks/django/: stack.yaml
stacks/elixir/: stack.yaml
stacks/express/: stack.yaml
stacks/fastapi/: stack.yaml
stacks/fiber/: stack.yaml
stacks/flask/: stack.yaml
stacks/fullstack/: CLAUDE.md  config.json  depends  paths.json  settings.json
stacks/gin/: stack.yaml
stacks/go/: stack.yaml
stacks/javascript/: stack.yaml
stacks/nextjs/: stack.yaml
stacks/nuxt/: stack.yaml
stacks/phoenix/: stack.yaml
stacks/python/: stack.yaml
stacks/python-fastapi/: CLAUDE.md  settings.json
stacks/rails/: CLAUDE.md  settings.json  stack.yaml
test-app/: .gitignore  CLAUDE.md
test-app/backend/: README.md  pyproject.toml  todo.db
test-app/backend/src/app/: __init__.py  config.py  database.py  main.py
test-app/backend/src/app/models/: todo.py
test-app/backend/src/app/routers/: __init__.py  todo_router.py
test-app/backend/src/app/schemas/: todo.py
test-app/backend/src/app/services/: todo_service.py
test-app/backend/tests/: conftest.py  test_todo_router.py  test_todo_schemas.py  test_todo_service.py
tests/: __init__.py  test_config.py  test_dashboard.py  test_elixir_stack.py  test_extensibility.py  test_go_stack.py  test_installer.py  test_integration.py  test_javascript_stack.py  test_options.py  test_python_stack.py  test_renderer.py  test_ruby_stack.py  test_schema.py
(+491 files in other folders)
